--- a/languages/eab-en_US.po
+++ b/languages/eab-en_US.po
@@ -4466,16 +4466,16 @@ msgstr "This product is used as an entry payment for <a href=\"%s\">%s</a>."
 #, fuzzy
 msgid ""
 "Das <a href=\"https://n3rds.work/piestingtal_source/marketpress-shopsystem/"
-"\">PS-eCommerce</a> Plugin muss installiert und aktiviert sein, damit es "
+"\">MarketPress</a> Plugin muss installiert und aktiviert sein, damit es "
 "funktioniert"
 msgstr ""
 "The <a href=\"https://n3rds.work/piestingtal_source/marketpress-shopsystem/"
-"\">PS-eCommerce</a> plugin must be installed and activated for it to work"
+"\">MarketPress</a> plugin must be installed and activated for it to work"
 
 #: lib/plugins/eab-payment-marketpress.php:110
 #, fuzzy
-msgid "Zahlung mit PS-eCommerce Artikeln"
-msgstr "Payment with PS-eCommerce articles"
+msgid "Zahlung mit MarketPress Artikeln"
+msgstr "Payment with MarketPress articles"
 
 #: lib/plugins/eab-payment-marketpress.php:113
 #, fuzzy
