--- a/languages/eab-fr_FR.po
+++ b/languages/eab-fr_FR.po
@@ -4576,16 +4576,16 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Das <a href=\"https://n3rds.work/piestingtal_source/marketpress-shopsystem/"
-"\">PS-eCommerce</a> Plugin muss installiert und aktiviert sein, damit es "
+"\">MarketPress</a> Plugin muss installiert und aktiviert sein, damit es "
 "funktioniert"
 msgstr ""
 "Le plugin <a href=\"https://n3rds.work/piestingtal_source/marketpress-"
-"shopsystem/\">PS-eCommerce</a> doit être installé et activé pour fonctionner"
+"shopsystem/\">MarketPress</a> doit être installé et activé pour fonctionner"
 
 #: lib/plugins/eab-payment-marketpress.php:110
 #, fuzzy
-msgid "Zahlung mit PS-eCommerce Artikeln"
-msgstr "Paiement avec des articles PS-eCommerce"
+msgid "Zahlung mit MarketPress Artikeln"
+msgstr "Paiement avec des articles MarketPress"
 
 #: lib/plugins/eab-payment-marketpress.php:113
 #, fuzzy
