--- a/languages/eab-fr_FR.po
+++ b/languages/eab-fr_FR.po
@@ -2338,11 +2338,11 @@ msgstr "Redémarre le tutoriel"
 #, fuzzy
 msgid ""
 "Wenn das <href=\"https://n3rds.work/piestingtal-source-project/ps-gmaps/"
-"\">PS-Gmaps</a> Plugin installiert ist, kannst Du die vollständige "
+"\">PS Google Maps</a> Plugin installiert ist, kannst Du die vollständige "
 "Integration von Google Maps in Deinen Veranstaltungen verwenden"
 msgstr ""
 "Si le plugin <href=\"https://n3rds.work/piestingtal-source-project/ps-gmaps/"
-"\">PS-Gmaps</a> est installé, tu peux utiliser l'intégration complète de "
+"\">PS Google Maps</a> est installé, tu peux utiliser l'intégration complète de "
 "Google Maps dans tes événements"
 
 #: lib/contextual_help/class_eab_admin_help.php:130
@@ -4455,10 +4455,10 @@ msgstr "Error"
 #: lib/plugins/eab-maps-event_maps_options.php:39
 #, fuzzy, php-format
 msgid ""
-"Du benötigst das <a href='%s'>PS-Gmaps</a> Plugin installiert and aktiviert "
+"Du benötigst das <a href='%s'>PS Google Maps</a> Plugin installiert and aktiviert "
 "um diese Erweiterung aktivieren zu können"
 msgstr ""
-"Tu dois avoir installé et activé le plugin <a href='%s'>PS-Gmaps</a> pour "
+"Tu dois avoir installé et activé le plugin <a href='%s'>PS Google Maps</a> pour "
 "pouvoir activer cette extension"
 
 #: lib/plugins/eab-maps-event_maps_options.php:56
