feat: Add new CSS styles for Events+ documentation and layout
docs: Create index.md for Events+ documentation with detailed features and usage instructions

chore: Bump version to 1.4.4 and update plugin details

fix: Correct translation string in eab-en_US.po for version display

refactor: Rename PS-Mitglieder+ Integration plugin to PS-Mitglieder Integration for clarity

chore: Update readme.txt for version 1.4.4 and compatibility with WordPress 6.8.1

--- a/languages/eab-en_US.po
+++ b/languages/eab-en_US.po
@@ -983,7 +983,7 @@ msgstr "Activate"
 #: lib/class_eab_addon_handler.php:219
 #, php-format
 msgid "Version %s"
-msgstr "版本 %s"
+msgstr "Version %s"
 
 #: lib/class_eab_addon_handler.php:221
 #, fuzzy, php-format
